--- a/front-end/package.json
+++ b/front-end/package.json
@@ -44,11 +44,11 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
-    "country-state-city": "^3.2.1",
     "date-fns": "^3.3.1",
     "embla-carousel-react": "^8.0.0-rc22",
     "lucide-react": "^0.330.0",
     "next-themes": "^0.2.1",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
@@ -56,6 +56,7 @@
     "react-hook-form": "^7.50.1",
     "react-resizable-panels": "^2.0.7",
     "react-router-dom": "^6.22.0",
+    "recharts": "^2.12.0",
     "sonner": "^1.4.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
@@ -67,7 +68,6 @@
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.17",
-    "daisyui": "^4.6.1",
     "eslint": "^8.55.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
