--- a/back-end/package.json
+++ b/back-end/package.json
@@ -2,11 +2,11 @@
   "name": "back-end",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js",
-    "start": "node server.js",
+    "dev": "nodemon app.js",
+    "start": "node app.js",
     "generate": "prisma generate",
     "studio": "prisma studio",
     "migrate:dev": "prisma migrate dev",
